# room-slot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
.githooks/: commit-msg
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 831ecfd56441_init.py  9fbccbeaa598_fix_defaults.py  f9e5588d9210_init.py
backend/scripts/: seed_rooms.py
backend/src/roomslot/: __init__.py  __main__.py  errors.py
backend/src/roomslot/api/: exception_handlers.py
backend/src/roomslot/api/middlewares/: request_logging.py
backend/src/roomslot/api/routers/: __init__.py  auth.py  bookings.py  dependencies.py  health.py  room.py  slots.py  ws.py
backend/src/roomslot/api/schemas/: auth.py  base.py  bookings.py  health.py  rooms.py  slots.py
backend/src/roomslot/bootstrap/: admin.py  app.py  engine.py  exception_handler_register.py  health.py  lifespan.py  redis.py  register_middlewares.py
backend/src/roomslot/cache/: base.py
backend/src/roomslot/common/: const.py  dto.py  exceptions.py  mappers.py  providers.py  types.py
backend/src/roomslot/config/: admin.py  base.py  database.py  logging.py  redis.py  security.py  service.py  settings.py  types.py  utils.py
backend/src/roomslot/containers/: container.py  database.py
backend/src/roomslot/core/: exceptions.py  health.py
backend/src/roomslot/db/: checks.py  engine.py  session.py
backend/src/roomslot/db/models/: __init__.py  base.py  booking.py  enums.py  room.py  user.py
backend/src/roomslot/domain/: const.py  enums.py  ports.py
backend/src/roomslot/domain/entities/: booking.py  room.py  user.py
backend/src/roomslot/domain/utils/: converters.py  validators.py
backend/src/roomslot/domain/value_objects/: email.py  slot.py
backend/src/roomslot/infra/db/: checks.py
backend/src/roomslot/logging/: policy.py
backend/src/roomslot/messaging/: channels.py  listener.py  publisher.py
backend/src/roomslot/middlewares/: request_logging.py
backend/src/roomslot/models/: __init__.py  booking.py  enums.py  room.py  types.py  user.py
backend/src/roomslot/observation/logs/: policy.py  setup.py
backend/src/roomslot/repositories/: auth.py  base.py  booking.py  room.py
backend/src/roomslot/routers/: __init__.py  dependencies.py  health.py
backend/src/roomslot/schemas/: base.py  health.py
backend/src/roomslot/security/: password_hasher.py
backend/src/roomslot/security/jwt/: manager.py  token_claims.py
backend/src/roomslot/services/: auth.py  booking.py  event_publisher.py  room.py  slot.py
backend/src/roomslot/ws/: handlers.py  room_connection_manager.py
backend/tests/: test_dump.py
frontend/: .env.example  Dockerfile  composer.json  package-lock.json
frontend/app/Http/Controllers/: AuthController.php  BookingController.php  MeController.php  (+1 more)
frontend/app/Support/: FastApiClient.php
frontend/bootstrap/: app.php
frontend/config/: services.php
frontend/resources/js/: app.jsx
frontend/routes/: web.php
nginx/: Dockerfile  nginx.conf
(+7 files in other folders)
