[project]
name = "roomslot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Armontex", email = "windle1337@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
roomslot = "roomslot:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
lint = [
    "bandit>=1.9.4",
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
test = [
    "pytest>=9.1.0",
]
